operator/pkg/gateway-api/testdata/gateway/listenerset-l4-namespace-isolation/output/tcproute-gateway-tcp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: gateway-tcp
  namespace: l4-listenerset-ns
  resourceVersion: "1000"
spec:
  parentRefs:
  - name: l4-namespace-isolation
    namespace: gateway-conformance-infra
  rules:
  - backendRefs:
    - name: tcp-backend
      port: 3000
status:
  parents:
  - conditions:
    - lastTransitionTime: "2026-06-12T01:24:17Z"
      message: Accepted TCPRoute
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-06-12T01:24:17Z"
      message: Service reference is valid
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    controllerName: io.cilium/gateway-controller
    parentRef:
      name: l4-namespace-isolation
      namespace: gateway-conformance-infra
